# axia

./: CMakeLists.txt  README.md
convex_mpc/: model.py
hacking/convex_mpc/: model.py
hacking/convex_mpc/unitree_robots/go2/: scene.xml
python/: README.md  main.py
src/: main.cpp  renderer.cpp  renderer.h  simulation.cpp  simulation.h
